# AdventOfCode2022

./: .gitignore  README.md
01/: Cargo.toml
01/src/: main.rs
02/: Cargo.toml
02/src/: main.rs
03/: Cargo.toml
03/src/: main.rs
04/: Cargo.toml
04/src/: main.rs
05/: Cargo.toml
05/src/: main.rs
06/: Cargo.toml
06/src/: main.rs
07/: Cargo.toml
07/src/: main.rs
template/: Cargo.toml
template/src/: main.rs
